AC_INIT([pulse_time],[1.0],[lfredlund@fi.upm.es])

AC_PREREQ([2.64])  

AC_COPYRIGHT([Copyright (C) 2009-2014 Thomas Arts, Koen Claessen, John Hughes, Michal Palka, Nick Smallbone, Hans Svensson, Lars-Åke Fredlund]) 

AC_ERLANG_NEED_ERLC

AC_CONFIG_FILES([ \
        Makefile \
        ]) 

AC_OUTPUT
 
